<resources>
    <string name="app_name">ImageFind</string>
    <string name="app_version">Version: 1.0</string>
    <string name="app_description">ImageFind lets you search the text in your images by running machine learning OCR algorithm on your gallery.
    The app was programmed with privacy in mind and the OCR is done completley on-device.</string>
    <string name="intent_label">Recognise text with ImageFind</string>

    <string name="app_developer_title">Developer:</string>
    <string name="app_developer_name">Matej Horvat</string>

    <string name="scanDialogTitle">Folders to scan</string>
    <string name="scanDialogConfirm">Scan</string>
    <string name="scanDialogCancel">Cancel</string>

    <string name="scanButton">New Scan</string>
    <string name="deleteAllButton">Delete all scans</string>

    <string name="inputFieldHint">Search…</string>

    <string name="dropdownScan">Scan</string>
    <string name="dropdownAbout">About</string>
    <string name="dropdownInstructions">Help</string>
    <string name="dropdownClearCache">Clear scan cache</string>
    <string name="dropdownRefresh">Refresh scan</string>

    <string name="clearCacheTitle">Delete all scanned images?</string>
    <string name="clearCacheText">Are you sure you want to delete all scanned images?</string>
    <string name="clearCacheConfirm">Clear ALL</string>
    <string name="clearCacheDeny">Abort</string>


    <string name="notificationChannelName">ImageScanNotification</string>
    <string name="notificationChannelDescription">Notification that visualises progress of image scan</string>
    <string name="notificationContentText">Processed</string>
    <string name="notificationContentTitle">Scan in progress</string>

    <string name="lastScanNever">Last scan: Never</string>
    <string name="lastScan">Last scan: </string>

    <string name="scanInstructions"><b>ImageFind</b> lets you search the text in your images. Before you can do that,
        the app needs to process the images.\nTo do so, click the <b>\"New Scan\"</b> button and in the multiple choice menu,
    select the folders from which the images will be scanned.\n\nRescanning the same folder again will find new images and update older ones, if changes have been made to them.\n\nScan time depends on the device\'s CPU and the number of selected images, so it could take a while.
    </string>

    <string name="permissionRationale">To process new images, the app needs access to device storage!</string>
    <string name="permissionRationaleTitle">Request storage permission</string>
    <string name="permissionAllow">Allow</string>
    <string name="permissionDeny">Deny</string>

    <string name="permissionDeniedExplanation">To process new images the app needs access to device storage! Without it scanning new images won\'t work. </string>
    <string name="permissionDeniedTitle">Storage permission denied</string>
    <string name="permissionDeniedAcknowledge">Acknowledge</string>

    <string name="toolbarScan">Scan Images</string>
    <string name="toolbarAbout">About ImageFind</string>

    <string name="imageDescription">Scanned image</string>

    <string name="OcrTextToolbarTitle">Recognised text</string>
    <string name="OcrTextTitle">Recognised text:</string>
    <string name="OcrTextContent">Sorry, no text was recognised from the image!</string>

    <string name="InstFrag1Title">Scan</string>
    <string name="InstFrag1Content">Scan images from your gallery</string>
    <string name="InstFrag2Title">Search</string>
    <string name="InstFrag2Content">Search through scanned images by text</string>
    <string name="InstFrag3Title">Text</string>
    <string name="InstFrag3Content">Access text of scanned images by long pressing on them</string>
    <string name="InstFrag4Title">Share menu</string>
    <string name="InstFrag4Content">Access text of any image by selecting ImageFind app from the share menu</string>
    <string name="InstFrag5Title">All set</string>
    <string name="InstFrag5Content">You\'re all set to start using ImageFind</string>
    <string name="InstFrag5Button">Start</string>


    <string name="toastScanAlert">Image scan is already in progress!</string>
    <string name="toastRefreshStart">Refreshing images</string>




</resources>
