<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    >

    <item android:id="@+id/dropdown_menu_scan"
        android:title="@string/dropdownScan"
        app:showAsAction="never" />


    <item android:id="@+id/dropdown_menu_about"
        android:title="@string/dropdownAbout"
        app:showAsAction="never"/>

    <item android:id="@+id/dropdown_menu_instructions"
        android:title="@string/dropdownInstructions"
        app:showAsAction="never"/>

    <item android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/inputFieldHint"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

</menu>